tests/negative/test_type_annot_bin_bad.orb
fnc main() () {
    sym (x:i32 0);
    (+ x 1):c8;
};